--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,9 @@
 
 
 
+<button mat-raised-button color="accent">
+    <mat-icon>home</mat-icon>
+    Home</button>
+
 
 <router-outlet></router-outlet>
