--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,1 +1,11 @@
-<p>signup works!</p>
+<section>
+  <form>
+    <mat-form-field>
+        <input matInput type="text" placeholder="Email" />
+    </mat-form-field>
+
+    <mat-form-field>
+        <input matInput type="password" placeholder="password" />
+    </mat-form-field>
+  </form>
+</section>
