--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,11 +1,19 @@
-<section>
-  <form>
+<section class="signup-form">
+  <form fxLayout="column" fxLayoutAlign="center center" #f="ngForm" (ngSubmit)="onSubmit(f)">
     <mat-form-field>
-        <input matInput type="text" placeholder="Email" />
+      <input matInput type="text" placeholder="Email" ngModel name="email" />
     </mat-form-field>
 
     <mat-form-field>
-        <input matInput type="password" placeholder="password" />
+      <input
+        matInput
+        type="password"
+        placeholder="password"
+        ngModel
+        name="password"
+      />
     </mat-form-field>
+
+    <button type="submit" mat-raised-button color="primary">Submit</button>
   </form>
 </section>
