--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,7 +1,23 @@
 <section class="signup-form">
-  <form fxLayout="column" fxLayoutAlign="center center" #f="ngForm" (ngSubmit)="onSubmit(f)">
+  <form
+    fxLayout="column"
+    fxLayoutAlign="center center"
+    #f="ngForm"
+    (ngSubmit)="onSubmit(f)"
+  >
     <mat-form-field>
-      <input matInput type="text" placeholder="Email" ngModel name="email" />
+      <input
+        matInput
+        type="email"
+        placeholder="Email"
+        ngModel
+        email
+        required
+        name="email"
+        #emailInput = "ngModel"
+      />
+      <mat-error *ngIf="emailInput.hasError('required')">Fild most not be empty</mat-error>
+      <mat-error *ngIf="!emailInput.hasError('required')">Email is invalid</mat-error>
     </mat-form-field>
 
     <mat-form-field>
@@ -10,8 +26,12 @@
         type="password"
         placeholder="password"
         ngModel
+        required
+        minlength="8"
         name="password"
       />
+      <mat-hint>should be at 8 character long</mat-hint>
+      <mat-error>Has to be as least 6 characters long.</mat-error>
     </mat-form-field>
 
     <button type="submit" mat-raised-button color="primary">Submit</button>
