--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -2,6 +2,7 @@
   <form
     fxLayout="column"
     fxLayoutAlign="center center"
+    fxLayoutGap="10px"
     #f="ngForm"
     (ngSubmit)="onSubmit(f)"
   >
@@ -39,14 +40,29 @@
     </mat-form-field>
 
     <mat-form-field>
-      <input matInput [matDatepicker]="picker">
-
+      <input
+        matInput
+        [matDatepicker]="picker"
+        placeholder="Birthday"
+        ngModel
+        name="birthday"
+        required
+      />
       <mat-datepicker-toggle [for]="picker"></mat-datepicker-toggle>
-
-
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
 
-    <button type="submit" mat-raised-button color="primary">Submit</button>
+    <mat-checkbox ngModel name="agree" required color="primary"
+      >Agree to Terms And Conditions.</mat-checkbox
+    >
+
+    <button
+      type="submit"
+      mat-raised-button
+      color="primary"
+      [disabled]="f.invalid"
+    >
+      Submit
+    </button>
   </form>
 </section>
