--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -10,7 +10,7 @@
       <input
         matInput
         type="email"
-        placeholder="Email"
+        placeholder="ایمیل"
         ngModel
         email
         required
@@ -18,10 +18,10 @@
         #emailInput="ngModel"
       />
       <mat-error *ngIf="emailInput.hasError('required')"
-        >Fild most not be empty</mat-error
+        >ایمیل نباید خالی باشد</mat-error
       >
       <mat-error *ngIf="!emailInput.hasError('required')"
-        >Email is invalid</mat-error
+        >ایمیل نامعتبر است</mat-error
       >
     </mat-form-field>
 
@@ -29,21 +29,21 @@
       <input
         matInput
         type="password"
-        placeholder="password"
+        placeholder="رمز عبور"
         ngModel
         required
         minlength="8"
         name="password"
       />
-      <mat-hint>should be at 8 character long</mat-hint>
-      <mat-error>Has to be as least 6 characters long.</mat-error>
+      <mat-hint>.رمز عبور باید شش کاراکتر داشته باشد</mat-hint>
+      <mat-error>.رمز عبور باید شش کاراکتر داشته باشد</mat-error>
     </mat-form-field>
 
     <mat-form-field>
       <input
         matInput
         [matDatepicker]="picker"
-        placeholder="Birthday"
+        placeholder="تاریخ تولد"
         ngModel
         name="birthday"
         required
@@ -53,7 +53,7 @@
     </mat-form-field>
 
     <mat-checkbox ngModel name="agree" required color="primary"
-      >Agree to Terms And Conditions.</mat-checkbox
+      >با شرایط و ضوابط موافقم.</mat-checkbox
     >
 
     <button
