--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,26 @@
-<router-outlet></router-outlet>
+<mat-sidenav-container>
+  <mat-sidenav #sidenav role="navigation">
+    <p>this is my sideNav</p>
+  </mat-sidenav>
+
+  <mat-sidenav-content>
+    <mat-toolbar color="primary">
+      <div>Logo</div>
+
+      <div>
+        <a routerLink="signup">Signup </a>
+        <a routerLink="login"> Login</a>
+        <a routerLink="logout">Logout </a>
+      </div>
+
+      <div>
+        <button (click)="sidenav.toggle()">Toggle sidenav</button>
+      </div>
+      
+    </mat-toolbar>
+
+    <main>
+      <router-outlet></router-outlet>
+    </main>
+  </mat-sidenav-content>
+</mat-sidenav-container>
