--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,50 @@
-<p>login works!</p>
+<section class="signup-form">
+  <form
+    fxLayout="column"
+    fxLayoutAlign="center center"
+    fxLayoutGap="10px"
+    #f="ngForm"
+  > 
+    <mat-form-field>
+      <input
+        matInput
+        type="email"
+        placeholder="ایمیل"
+        ngModel
+        email
+        required
+        name="email"
+        #emailInput="ngModel"
+      />
+      <mat-error *ngIf="emailInput.hasError('required')"
+        >ایمیل نباید خالی باشد</mat-error
+      >
+      <mat-error *ngIf="!emailInput.hasError('required')"
+        >ایمیل نامعتبر است</mat-error
+      >
+    </mat-form-field>
+
+    <mat-form-field>
+      <input
+        matInput
+        type="password"
+        placeholder="رمز عبور"
+        ngModel
+        required
+        minlength="8"
+        name="password"
+      />
+      <mat-hint>.رمز عبور باید شش کاراکتر داشته باشد</mat-hint>
+      <mat-error>.رمز عبور باید شش کاراکتر داشته باشد</mat-error>
+    </mat-form-field>
+
+    <button
+      type="submit"
+      mat-raised-button
+      color="primary"
+      [disabled]="f.invalid"
+    >
+      Submit
+    </button>
+  </form>
+</section>
