--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,22 @@
 <mat-sidenav-container>
   <mat-sidenav #sidenav role="navigation">
-    <p>this is my sideNav</p>
+    <mat-nav-list>
+      <a mat-list-item routerLink="signup" (click)="sidenav.close()">
+        ثبت نام
+      </a>
+      <a mat-list-item routerLink="login" (click)="sidenav.close()">ورود </a>
+      <a mat-list-item routerLink="training" (click)="sidenav.close()"
+        >تمرین
+      </a>
+    </mat-nav-list>
   </mat-sidenav>
 
   <mat-sidenav-content>
     <mat-toolbar color="primary">
       <div fxHide.gt-xs>
-        <button mat-icon-button (click)="sidenav.toggle()">
+        <a mat-icon-button (click)="sidenav.toggle()">
           <mat-icon>menu</mat-icon>
-        </button>
+        </a>
       </div>
 
       <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
