--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,44 +1,10 @@
 <mat-sidenav-container>
   <mat-sidenav #sidenav role="navigation">
-    <mat-nav-list>
-      <a mat-list-item routerLink="signup" (click)="sidenav.close()">
-        ثبت نام
-      </a>
-      <a mat-list-item routerLink="login" (click)="sidenav.close()">ورود </a>
-      <a mat-list-item routerLink="training" (click)="sidenav.close()"
-        >تمرین
-      </a>
-    </mat-nav-list>
+    <app-sidenav-list (closeSideNav)="sidenav.close()"></app-sidenav-list>
   </mat-sidenav>
 
   <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      <div fxHide.gt-xs>
-        <a mat-icon-button (click)="sidenav.toggle()">
-          <mat-icon>menu</mat-icon>
-        </a>
-      </div>
-
-      <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
-        <ul fxLayout fxLayoutGap="10px" class="navigation-items">
-          <li>
-            <a mat-icon-button routerLink="signup">
-              <mat-icon> person_add </mat-icon>
-            </a>
-          </li>
-          <li>
-            <a mat-icon-button routerLink="login">
-              <mat-icon>login</mat-icon>
-            </a>
-          </li>
-          <li>
-            <a mat-icon-button routerLink="training">
-              <mat-icon> home </mat-icon>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </mat-toolbar>
+    <app-header (sidenavToggle)="sidenav.toggle()"></app-header>
 
     <main>
       <router-outlet></router-outlet>
