--- a/src/app/current-training/current-training.component.html
+++ b/src/app/current-training/current-training.component.html
@@ -1,1 +1,7 @@
-<p>current-training works!</p>
+<section class="current-training" fxLayout="column" fxLayoutAlign="center center">
+  <mat-progress-spinner [value]="progress"></mat-progress-spinner>
+
+  <h1>{{progress}} %</h1>
+  <p>ادامه بده تو میتونی</p>
+  <button mat-raised-button color="accent">توقف</button>
+</section>
