--- a/src/app/new-training/new-training.component.html
+++ b/src/app/new-training/new-training.component.html
@@ -17,7 +17,7 @@
     </mat-card-content>
 
     <mat-card-actions fxLayoutAlign="center">
-      <button type="submit" mat-button>شروع</button>
+      <button type="submit" (click)="onStartTraining()" mat-button>شروع</button>
     </mat-card-actions>
   </mat-card>
 </section>
