--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -7,20 +7,24 @@
 
   <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
     <ul fxLayout fxLayoutGap="10px" class="navigation-items">
-      <li>
+      <li *ngIf="!isAuth">
         <a mat-icon-button routerLink="signup">
           <mat-icon> person_add </mat-icon>
         </a>
       </li>
-      <li>
+      <li *ngIf="!isAuth">
         <a mat-icon-button routerLink="login">
           <mat-icon>login</mat-icon>
         </a>
       </li>
-      <li>
+      <li *ngIf="isAuth">
         <a mat-icon-button routerLink="training">
           <mat-icon> home </mat-icon>
         </a>
+      </li>
+
+      <li *ngIf="isAuth">
+        <a mat-icon-button><mat-icon>logout</mat-icon></a>
       </li>
     </ul>
   </div>
