--- a/src/app/current-training/stop-training/stop-training-component.html
+++ b/src/app/current-training/stop-training/stop-training-component.html
@@ -1,5 +1,7 @@
 <h1 mat-dialog-title>آیا از توقف تمرین اطمینان دارید؟</h1>
-
+<mat-dialog-content>
+  <p>شما تا این لحظه {{passedData.progress}}% از تمرین خود را انجام داده اید</p>
+</mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button [mat-dialog-close]="true">بله</button>
   <button mat-button [mat-dialog-close]="false">خیر</button>
